--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 MONGODB_CONNECTION_STRING=mongodb+srv://admin:JBVqB1Eb8UugMfDH@hotel-booking-app.j9qmsjq.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET_KEY=g%,9HoE%ckKqZl^
+JWT_SECRET_KEY=vlr0<O6JFp,i$S!
